Add content to Contact section

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -32,7 +32,8 @@
     />
 
     <!--Font awesome-->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" /> -->
+    <!-- <script src="https://kit.fontawesome.com/b949ecc55d.js" crossorigin="anonymous"></script> -->
 
     <title>Impact Coding React App</title>
   </head>
