--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -35,7 +35,7 @@
     <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" /> -->
     <!-- <script src="https://kit.fontawesome.com/b949ecc55d.js" crossorigin="anonymous"></script> -->
 
-    <title>Impact Coding React App</title>
+    <title>Impact Coding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
