--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -33,6 +33,15 @@
     <title>Impact Coding</title>
   </head>
   <body>
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
+      nonce="GgYWM08s"
+    ></script>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
