--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,16 @@
       defer
       crossorigin="anonymous"
       src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
-      nonce="6f2uSvh2"
+      nonce="Z9anHtS2"
     ></script>
+    <!-- <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0"
+      nonce="6f2uSvh2"
+    ></script> -->
     <!-- <div id="fb-root"></div>
     <script
       async
